feat: implement PublicDataSyncService for periodic and background toilet data synchronization